unpackaged/main/default/objects/Training_Credit__c/Training_Credit__c.object-meta.xml
<CustomObject>
    <label>Training Credit</label>
    <nameField>
        <label>Training Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>