unpackaged/main/default/objects/Training_Credit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Credits</relationshipLabel>
    <relationshipName>Training_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>