unpackaged/main/default/objects/Training_Credit__c/fields/Credits_Attended__c.field-meta.xml
<CustomField>
    <fullName>Credits_Attended__c</fullName>
    <inlineHelpText>Includes those students in Attended status</inlineHelpText>
    <label>Credits Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>