unpackaged/main/default/objects/Training_Credit__c/fields/Credits_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Credits_Confirmed__c</fullName>
    <inlineHelpText>Includes those students in Registration Received status</inlineHelpText>
    <label>Credits Confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>