unpackaged/main/default/objects/Training_Credit__c/fields/Credits_Unallocated__c.field-meta.xml
<CustomField>
    <fullName>Credits_Unallocated__c</fullName>
    <formula>Number_of_Uses__c  -  Times_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credits purchased minus total allocated</inlineHelpText>
    <label>Credits Unallocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>