unpackaged/main/default/objects/Training_Credit__c/fields/Expired_Chacked__c.field-meta.xml
<CustomField>
    <fullName>Expired_Chacked__c</fullName>
    <description>Date stamp of when Expired was checked</description>
    <label>Expired Checked</label>
    <type>Date</type>
</CustomField>