unpackaged/main/default/objects/Training_Credit__c/fields/Number_of_Uses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Uses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credits Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>