unpackaged/main/default/objects/Training_Credit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training Credits</relationshipLabel>
    <relationshipName>Training_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>