unpackaged/main/default/objects/Training_Credit__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Training Credits</relationshipLabel>
    <relationshipName>Training_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>