unpackaged/main/default/objects/Training_Credit__c/fields/Per_Course__c.field-meta.xml
<CustomField>
    <fullName>Per_Course__c</fullName>
    <inlineHelpText>This is the Per Course price for On Demand Training Credits. When provisioned, this is the price that the client will be charged</inlineHelpText>
    <label>Per Course</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>