unpackaged/main/default/objects/Training_Credit__c/fields/Recalculate_Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Times_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Times Used</label>
    <type>Checkbox</type>
</CustomField>