unpackaged/main/default/objects/Training_Credit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>If( 

 Expired__c = TRUE

,&quot;Inactive&quot;,

if( Start_Date__c &gt; Today() , &quot;Not Started&quot;,&quot;Active&quot;

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>