unpackaged/main/default/objects/Training_Credit__c/fields/Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Times_Used__c</fullName>
    <inlineHelpText>Includes all status’ EXCEPT for Cancelled</inlineHelpText>
    <label>Credits Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>