unpackaged/main/default/objects/Training_Credit__c/fields/Training_Credit_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Training_Credit_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Credit ID (18)</label>
    <type>Text</type>
</CustomField>