unpackaged/main/default/objects/Training_Credit__c/fields/Training_Credit_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_Credit_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Credit (ID)</label>
    <type>Text</type>
</CustomField>