unpackaged/main/default/objects/Training_Credit__c/recordTypes/On_Demand.recordType-meta.xml
<RecordType>
    <fullName>On_Demand</fullName>
    <active>true</active>
    <label>On Demand</label>
</RecordType>